fix(Published): refactor horizontal scroll
ref:
PL-6

--- a/src/views/Me/Works/Published/styles.module.css
+++ b/src/views/Me/Works/Published/styles.module.css
@@ -26,13 +26,17 @@
   }
 }
 
+.emblaViewport {
+  position: relative;
+  overflow: hidden;
+}
+
 .tabList {
   @mixin hide-scrollbar;
 
+  position: relative;
   display: flex;
-  gap: var(--spacing-base);
   padding: var(--spacing-base) var(--spacing-base) 0;
-  overflow-x: auto;
 
   @media (--sm-up) {
     padding: var(--spacing-base) 0 0;
@@ -41,8 +45,10 @@
   & .tabItem {
     @mixin transition;
 
+    position: relative;
     flex-shrink: 0;
     padding: var(--spacing-base-xxx-tight) var(--spacing-base-tight);
+    margin-right: var(--spacing-base);
     font-size: var(--font-size-sm);
     font-feature-settings:
       'clig' off,
